CompilerDesignIIT_tp--main/cs21b062_lab11/y.output
Terminals unused in grammar

    CONTINUE
    STRINGCONST


State 15 conflicts: 1 shift/reduce
State 17 conflicts: 15 shift/reduce
State 18 conflicts: 5 shift/reduce
State 20 conflicts: 15 shift/reduce
State 46 conflicts: 15 shift/reduce
State 93 conflicts: 1 reduce/reduce
State 135 conflicts: 15 shift/reduce
State 149 conflicts: 15 shift/reduce
State 154 conflicts: 15 shift/reduce
State 174 conflicts: 15 shift/reduce


Grammar

    0 $accept: StatementList $end

    1 StatementList: DeclarationList StatementList
    2              | Statement SEMICOLON StatementList
    3              | IfStatement

    4 $@1: ε

    5 $@2: ε

    6 $@3: ε

    7 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList
    8              | SwitchStatement StatementList
    9              | ε

   10 DeclarationList: Declaration DeclarationList
   11                | Declaration

   12 $@4: ε

   13 Declaration: LCURL $@4 DeclarationList RCURL
   14            | type variablelist SEMICOLON

   15 type: INT
   16     | DOUBLE
   17     | FLOAT
   18     | CHAR

   19 variablelist: IDENTIFIER COMMA variablelist
   20             | IDENTIFIER Bracket COMMA variablelist
   21             | IDENTIFIER EQ NUMBER
   22             | IDENTIFIER EQ CHARCONST
   23             | IDENTIFIER Bracket
   24             | IDENTIFIER EQ ConstIden COMMA variablelist
   25             | IDENTIFIER

   26 Bracket: LBRACK NUMBER RBRACK
   27        | LBRACK NUMBER RBRACK Bracket

   28 ConstIden: Val
   29          | IDENTIFIER

   30 $@5: ε

   31 $@6: ε

   32 SwitchStatement: SWITCH LPAREN CaseVal $@5 RPAREN LCURL CaseStatements RCURL $@6 StatementList

   33 $@7: ε

   34 $@8: ε

   35 CaseStatements: CASE CaseVal COLON dummyLabels $@7 StatementList BreakStmt $@8 CaseStatements
   36               | DEFAULT COLON StatementList
   37               | ε

   38 BreakStmt: BREAK SEMICOLON

   39 $@9: ε

   40 $@10: ε

   41 $@11: ε

   42 $@12: ε

   43 IfStatement: IF LPAREN CmpStm RPAREN dummyLabels LCURL $@9 StatementList dummyLabels $@10 RCURL $@11 ElseIfStatement $@12 StatementList

   44 $@13: ε

   45 $@14: ε

   46 $@15: ε

   47 $@16: ε

   48 ElseIfStatement: ELSE IF LPAREN CmpStm RPAREN dummyLabels LCURL $@13 StatementList $@14 RCURL $@15 ElseStmt $@16 StatementList
   49                | ElseStmt

   50 ElseStmt: ELSE LCURL StatementList RCURL
   51         | ε

   52 CmpStm: ComRelExp
   53       | Statement

   54 dummyLabels: ε

   55 begin: ε

   56 Statement: IDENTIFIER EQ Statement
   57          | Term

   58 ComRelExp: ComRelExp AND Relexp
   59          | ComRelExp OR Relexp
   60          | Relexp

   61 Relexp: Term LT Term
   62       | Term LTE Term
   63       | Term GT Term
   64       | Term GTE Term
   65       | Term EQ EQ Term
   66       | Term NOT EQ Term
   67       | LPAREN Relexp RPAREN
   68       | NOT Relexp
   69       | ε

   70 Term: Term ADD Factor
   71     | Term SUB Factor
   72     | Factor

   73 Factor: Factor MUL SIGNVal
   74       | Factor DIV SIGNVal
   75       | SIGNVal

   76 SIGNVal: ADD Val
   77        | SUB Val
   78        | Val

   79 CaseVal: IDENTIFIER
   80        | NUMBER

   81 Val: IDENTIFIER
   82    | NUMBER
   83    | PADD IDENTIFIER
   84    | PSUB IDENTIFIER
   85    | IDENTIFIER PADD
   86    | IDENTIFIER PSUB
   87    | LPAREN Term RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 43 48
    ELSE (259) 48 50
    ADD (260) 70 76
    SUB (261) 71 77
    MUL (262) 73
    DIV (263) 74
    EQ (264) 21 22 24 56 65 66
    LT (265) 61
    LTE (266) 62
    GT (267) 63
    GTE (268) 64
    NOT (269) 66 68
    AND (270) 58
    OR (271) 59
    PADD (272) 83 85
    PSUB (273) 84 86
    LPAREN (274) 7 32 43 48 67 87
    RPAREN (275) 7 32 43 48 67 87
    LCURL (276) 7 13 32 43 48 50
    RCURL (277) 7 13 32 43 48 50
    SEMICOLON (278) 2 14 38
    WHILE (279) 7
    COLON (280) 35 36
    SWITCH (281) 32
    BREAK (282) 38
    CONTINUE (283)
    DEFAULT (284) 36
    CASE (285) 35
    COMMA (286) 19 20 24
    LBRACK (287) 26 27
    RBRACK (288) 26 27
    INT (289) 15
    DOUBLE (290) 16
    FLOAT (291) 17
    CHAR (292) 18
    CHARCONST <cval> (293) 22
    NUMBER <dval> (294) 21 26 27 80 82
    STRINGCONST <addr> (295)
    IDENTIFIER <addr> (296) 19 20 21 22 23 24 25 29 56 79 81 83 84 85 86


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    StatementList <addr> (43)
        on left: 1 2 3 7 8 9
        on right: 0 1 2 7 8 32 35 36 43 48 50
    $@1 (44)
        on left: 4
        on right: 7
    $@2 (45)
        on left: 5
        on right: 7
    $@3 (46)
        on left: 6
        on right: 7
    DeclarationList (47)
        on left: 10 11
        on right: 1 10 13
    Declaration <addr> (48)
        on left: 13 14
        on right: 10 11
    $@4 (49)
        on left: 12
        on right: 13
    type <addr> (50)
        on left: 15 16 17 18
        on right: 14
    variablelist <addr> (51)
        on left: 19 20 21 22 23 24 25
        on right: 14 19 20 24
    Bracket <addr> (52)
        on left: 26 27
        on right: 20 23 27
    ConstIden <addr> (53)
        on left: 28 29
        on right: 24
    SwitchStatement <addr> (54)
        on left: 32
        on right: 8
    $@5 (55)
        on left: 30
        on right: 32
    $@6 (56)
        on left: 31
        on right: 32
    CaseStatements <addr> (57)
        on left: 35 36 37
        on right: 32 35
    $@7 (58)
        on left: 33
        on right: 35
    $@8 (59)
        on left: 34
        on right: 35
    BreakStmt <addr> (60)
        on left: 38
        on right: 35
    IfStatement <addr> (61)
        on left: 43
        on right: 3
    $@9 (62)
        on left: 39
        on right: 43
    $@10 (63)
        on left: 40
        on right: 43
    $@11 (64)
        on left: 41
        on right: 43
    $@12 (65)
        on left: 42
        on right: 43
    ElseIfStatement <addr> (66)
        on left: 48 49
        on right: 43
    $@13 (67)
        on left: 44
        on right: 48
    $@14 (68)
        on left: 45
        on right: 48
    $@15 (69)
        on left: 46
        on right: 48
    $@16 (70)
        on left: 47
        on right: 48
    ElseStmt <addr> (71)
        on left: 50 51
        on right: 48 49
    CmpStm <addr> (72)
        on left: 52 53
        on right: 43 48
    dummyLabels <lab> (73)
        on left: 54
        on right: 7 35 43 48
    begin <lab> (74)
        on left: 55
        on right: 7
    Statement <addr> (75)
        on left: 56 57
        on right: 2 53 56
    ComRelExp <addr> (76)
        on left: 58 59 60
        on right: 7 52 58 59
    Relexp <addr> (77)
        on left: 61 62 63 64 65 66 67 68 69
        on right: 58 59 60 67 68
    Term <addr> (78)
        on left: 70 71 72
        on right: 57 61 62 63 64 65 66 70 71 87
    Factor <addr> (79)
        on left: 73 74 75
        on right: 70 71 72 73 74
    SIGNVal <addr> (80)
        on left: 76 77 78
        on right: 73 74 75
    CaseVal <addCase> (81)
        on left: 79 80
        on right: 32 35
    Val <addr> (82)
        on left: 81 82 83 84 85 86 87
        on right: 28 76 77 78


State 0

    0 $accept: • StatementList $end

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    LCURL       shift, and go to state 7
    WHILE       shift, and go to state 8
    SWITCH      shift, and go to state 9
    INT         shift, and go to state 10
    DOUBLE      shift, and go to state 11
    FLOAT       shift, and go to state 12
    CHAR        shift, and go to state 13
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 9 (StatementList)

    StatementList    go to state 16
    DeclarationList  go to state 17
    Declaration      go to state 18
    type             go to state 19
    SwitchStatement  go to state 20
    IfStatement      go to state 21
    Statement        go to state 22
    Term             go to state 23
    Factor           go to state 24
    SIGNVal          go to state 25
    Val              go to state 26


State 1

   43 IfStatement: IF • LPAREN CmpStm RPAREN dummyLabels LCURL $@9 StatementList dummyLabels $@10 RCURL $@11 ElseIfStatement $@12 StatementList

    LPAREN  shift, and go to state 27


State 2

   76 SIGNVal: ADD • Val

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Val  go to state 29


State 3

   77 SIGNVal: SUB • Val

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Val  go to state 30


State 4

   83 Val: PADD • IDENTIFIER

    IDENTIFIER  shift, and go to state 31


State 5

   84 Val: PSUB • IDENTIFIER

    IDENTIFIER  shift, and go to state 32


State 6

   87 Val: LPAREN • Term RPAREN

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Term     go to state 33
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 7

   13 Declaration: LCURL • $@4 DeclarationList RCURL

    $default  reduce using rule 12 ($@4)

    $@4  go to state 34


State 8

    7 StatementList: WHILE • LPAREN ComRelExp RPAREN LCURL begin dummyLabels dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    LPAREN  shift, and go to state 35


State 9

   32 SwitchStatement: SWITCH • LPAREN CaseVal $@5 RPAREN LCURL CaseStatements RCURL $@6 StatementList

    LPAREN  shift, and go to state 36


State 10

   15 type: INT •

    $default  reduce using rule 15 (type)


State 11

   16 type: DOUBLE •

    $default  reduce using rule 16 (type)


State 12

   17 type: FLOAT •

    $default  reduce using rule 17 (type)


State 13

   18 type: CHAR •

    $default  reduce using rule 18 (type)


State 14

   82 Val: NUMBER •

    $default  reduce using rule 82 (Val)


State 15

   56 Statement: IDENTIFIER • EQ Statement
   81 Val: IDENTIFIER •
   85    | IDENTIFIER • PADD
   86    | IDENTIFIER • PSUB

    EQ    shift, and go to state 37
    PADD  shift, and go to state 38
    PSUB  shift, and go to state 39

    EQ        [reduce using rule 81 (Val)]
    $default  reduce using rule 81 (Val)


State 16

    0 $accept: StatementList • $end

    $end  shift, and go to state 40


State 17

    1 StatementList: DeclarationList • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    LCURL       shift, and go to state 7
    WHILE       shift, and go to state 8
    SWITCH      shift, and go to state 9
    INT         shift, and go to state 10
    DOUBLE      shift, and go to state 11
    FLOAT       shift, and go to state 12
    CHAR        shift, and go to state 13
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    IF          [reduce using rule 9 (StatementList)]
    ADD         [reduce using rule 9 (StatementList)]
    SUB         [reduce using rule 9 (StatementList)]
    PADD        [reduce using rule 9 (StatementList)]
    PSUB        [reduce using rule 9 (StatementList)]
    LPAREN      [reduce using rule 9 (StatementList)]
    LCURL       [reduce using rule 9 (StatementList)]
    WHILE       [reduce using rule 9 (StatementList)]
    SWITCH      [reduce using rule 9 (StatementList)]
    INT         [reduce using rule 9 (StatementList)]
    DOUBLE      [reduce using rule 9 (StatementList)]
    FLOAT       [reduce using rule 9 (StatementList)]
    CHAR        [reduce using rule 9 (StatementList)]
    NUMBER      [reduce using rule 9 (StatementList)]
    IDENTIFIER  [reduce using rule 9 (StatementList)]
    $default    reduce using rule 9 (StatementList)

    StatementList    go to state 41
    DeclarationList  go to state 17
    Declaration      go to state 18
    type             go to state 19
    SwitchStatement  go to state 20
    IfStatement      go to state 21
    Statement        go to state 22
    Term             go to state 23
    Factor           go to state 24
    SIGNVal          go to state 25
    Val              go to state 26


State 18

   10 DeclarationList: Declaration • DeclarationList
   11                | Declaration •

    LCURL   shift, and go to state 7
    INT     shift, and go to state 10
    DOUBLE  shift, and go to state 11
    FLOAT   shift, and go to state 12
    CHAR    shift, and go to state 13

    LCURL     [reduce using rule 11 (DeclarationList)]
    INT       [reduce using rule 11 (DeclarationList)]
    DOUBLE    [reduce using rule 11 (DeclarationList)]
    FLOAT     [reduce using rule 11 (DeclarationList)]
    CHAR      [reduce using rule 11 (DeclarationList)]
    $default  reduce using rule 11 (DeclarationList)

    DeclarationList  go to state 42
    Declaration      go to state 18
    type             go to state 19


State 19

   14 Declaration: type • variablelist SEMICOLON

    IDENTIFIER  shift, and go to state 43

    variablelist  go to state 44


State 20

    8 StatementList: SwitchStatement • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    LCURL       shift, and go to state 7
    WHILE       shift, and go to state 8
    SWITCH      shift, and go to state 9
    INT         shift, and go to state 10
    DOUBLE      shift, and go to state 11
    FLOAT       shift, and go to state 12
    CHAR        shift, and go to state 13
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    IF          [reduce using rule 9 (StatementList)]
    ADD         [reduce using rule 9 (StatementList)]
    SUB         [reduce using rule 9 (StatementList)]
    PADD        [reduce using rule 9 (StatementList)]
    PSUB        [reduce using rule 9 (StatementList)]
    LPAREN      [reduce using rule 9 (StatementList)]
    LCURL       [reduce using rule 9 (StatementList)]
    WHILE       [reduce using rule 9 (StatementList)]
    SWITCH      [reduce using rule 9 (StatementList)]
    INT         [reduce using rule 9 (StatementList)]
    DOUBLE      [reduce using rule 9 (StatementList)]
    FLOAT       [reduce using rule 9 (StatementList)]
    CHAR        [reduce using rule 9 (StatementList)]
    NUMBER      [reduce using rule 9 (StatementList)]
    IDENTIFIER  [reduce using rule 9 (StatementList)]
    $default    reduce using rule 9 (StatementList)

    StatementList    go to state 45
    DeclarationList  go to state 17
    Declaration      go to state 18
    type             go to state 19
    SwitchStatement  go to state 20
    IfStatement      go to state 21
    Statement        go to state 22
    Term             go to state 23
    Factor           go to state 24
    SIGNVal          go to state 25
    Val              go to state 26


State 21

    3 StatementList: IfStatement •

    $default  reduce using rule 3 (StatementList)


State 22

    2 StatementList: Statement • SEMICOLON StatementList

    SEMICOLON  shift, and go to state 46


State 23

   57 Statement: Term •
   70 Term: Term • ADD Factor
   71     | Term • SUB Factor

    ADD  shift, and go to state 47
    SUB  shift, and go to state 48

    $default  reduce using rule 57 (Statement)


State 24

   72 Term: Factor •
   73 Factor: Factor • MUL SIGNVal
   74       | Factor • DIV SIGNVal

    MUL  shift, and go to state 49
    DIV  shift, and go to state 50

    $default  reduce using rule 72 (Term)


State 25

   75 Factor: SIGNVal •

    $default  reduce using rule 75 (Factor)


State 26

   78 SIGNVal: Val •

    $default  reduce using rule 78 (SIGNVal)


State 27

   43 IfStatement: IF LPAREN • CmpStm RPAREN dummyLabels LCURL $@9 StatementList dummyLabels $@10 RCURL $@11 ElseIfStatement $@12 StatementList

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 51
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 52
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 69 (Relexp)

    CmpStm     go to state 53
    Statement  go to state 54
    ComRelExp  go to state 55
    Relexp     go to state 56
    Term       go to state 57
    Factor     go to state 24
    SIGNVal    go to state 25
    Val        go to state 26


State 28

   81 Val: IDENTIFIER •
   85    | IDENTIFIER • PADD
   86    | IDENTIFIER • PSUB

    PADD  shift, and go to state 38
    PSUB  shift, and go to state 39

    $default  reduce using rule 81 (Val)


State 29

   76 SIGNVal: ADD Val •

    $default  reduce using rule 76 (SIGNVal)


State 30

   77 SIGNVal: SUB Val •

    $default  reduce using rule 77 (SIGNVal)


State 31

   83 Val: PADD IDENTIFIER •

    $default  reduce using rule 83 (Val)


State 32

   84 Val: PSUB IDENTIFIER •

    $default  reduce using rule 84 (Val)


State 33

   70 Term: Term • ADD Factor
   71     | Term • SUB Factor
   87 Val: LPAREN Term • RPAREN

    ADD     shift, and go to state 47
    SUB     shift, and go to state 48
    RPAREN  shift, and go to state 58


State 34

   13 Declaration: LCURL $@4 • DeclarationList RCURL

    LCURL   shift, and go to state 7
    INT     shift, and go to state 10
    DOUBLE  shift, and go to state 11
    FLOAT   shift, and go to state 12
    CHAR    shift, and go to state 13

    DeclarationList  go to state 59
    Declaration      go to state 18
    type             go to state 19


State 35

    7 StatementList: WHILE LPAREN • ComRelExp RPAREN LCURL begin dummyLabels dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 51
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 52
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 69 (Relexp)

    ComRelExp  go to state 60
    Relexp     go to state 56
    Term       go to state 61
    Factor     go to state 24
    SIGNVal    go to state 25
    Val        go to state 26


State 36

   32 SwitchStatement: SWITCH LPAREN • CaseVal $@5 RPAREN LCURL CaseStatements RCURL $@6 StatementList

    NUMBER      shift, and go to state 62
    IDENTIFIER  shift, and go to state 63

    CaseVal  go to state 64


State 37

   56 Statement: IDENTIFIER EQ • Statement

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    Statement  go to state 65
    Term       go to state 23
    Factor     go to state 24
    SIGNVal    go to state 25
    Val        go to state 26


State 38

   85 Val: IDENTIFIER PADD •

    $default  reduce using rule 85 (Val)


State 39

   86 Val: IDENTIFIER PSUB •

    $default  reduce using rule 86 (Val)


State 40

    0 $accept: StatementList $end •

    $default  accept


State 41

    1 StatementList: DeclarationList StatementList •

    $default  reduce using rule 1 (StatementList)


State 42

   10 DeclarationList: Declaration DeclarationList •

    $default  reduce using rule 10 (DeclarationList)


State 43

   19 variablelist: IDENTIFIER • COMMA variablelist
   20             | IDENTIFIER • Bracket COMMA variablelist
   21             | IDENTIFIER • EQ NUMBER
   22             | IDENTIFIER • EQ CHARCONST
   23             | IDENTIFIER • Bracket
   24             | IDENTIFIER • EQ ConstIden COMMA variablelist
   25             | IDENTIFIER •

    EQ      shift, and go to state 66
    COMMA   shift, and go to state 67
    LBRACK  shift, and go to state 68

    $default  reduce using rule 25 (variablelist)

    Bracket  go to state 69


State 44

   14 Declaration: type variablelist • SEMICOLON

    SEMICOLON  shift, and go to state 70


State 45

    8 StatementList: SwitchStatement StatementList •

    $default  reduce using rule 8 (StatementList)


State 46

    2 StatementList: Statement SEMICOLON • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    LCURL       shift, and go to state 7
    WHILE       shift, and go to state 8
    SWITCH      shift, and go to state 9
    INT         shift, and go to state 10
    DOUBLE      shift, and go to state 11
    FLOAT       shift, and go to state 12
    CHAR        shift, and go to state 13
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    IF          [reduce using rule 9 (StatementList)]
    ADD         [reduce using rule 9 (StatementList)]
    SUB         [reduce using rule 9 (StatementList)]
    PADD        [reduce using rule 9 (StatementList)]
    PSUB        [reduce using rule 9 (StatementList)]
    LPAREN      [reduce using rule 9 (StatementList)]
    LCURL       [reduce using rule 9 (StatementList)]
    WHILE       [reduce using rule 9 (StatementList)]
    SWITCH      [reduce using rule 9 (StatementList)]
    INT         [reduce using rule 9 (StatementList)]
    DOUBLE      [reduce using rule 9 (StatementList)]
    FLOAT       [reduce using rule 9 (StatementList)]
    CHAR        [reduce using rule 9 (StatementList)]
    NUMBER      [reduce using rule 9 (StatementList)]
    IDENTIFIER  [reduce using rule 9 (StatementList)]
    $default    reduce using rule 9 (StatementList)

    StatementList    go to state 71
    DeclarationList  go to state 17
    Declaration      go to state 18
    type             go to state 19
    SwitchStatement  go to state 20
    IfStatement      go to state 21
    Statement        go to state 22
    Term             go to state 23
    Factor           go to state 24
    SIGNVal          go to state 25
    Val              go to state 26


State 47

   70 Term: Term ADD • Factor

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Factor   go to state 72
    SIGNVal  go to state 25
    Val      go to state 26


State 48

   71 Term: Term SUB • Factor

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Factor   go to state 73
    SIGNVal  go to state 25
    Val      go to state 26


State 49

   73 Factor: Factor MUL • SIGNVal

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    SIGNVal  go to state 74
    Val      go to state 26


State 50

   74 Factor: Factor DIV • SIGNVal

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    SIGNVal  go to state 75
    Val      go to state 26


State 51

   68 Relexp: NOT • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 51
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 52
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 69 (Relexp)

    Relexp   go to state 76
    Term     go to state 61
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 52

   67 Relexp: LPAREN • Relexp RPAREN
   87 Val: LPAREN • Term RPAREN

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 51
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 52
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 69 (Relexp)

    Relexp   go to state 77
    Term     go to state 78
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 53

   43 IfStatement: IF LPAREN CmpStm • RPAREN dummyLabels LCURL $@9 StatementList dummyLabels $@10 RCURL $@11 ElseIfStatement $@12 StatementList

    RPAREN  shift, and go to state 79


State 54

   53 CmpStm: Statement •

    $default  reduce using rule 53 (CmpStm)


State 55

   52 CmpStm: ComRelExp •
   58 ComRelExp: ComRelExp • AND Relexp
   59          | ComRelExp • OR Relexp

    AND  shift, and go to state 80
    OR   shift, and go to state 81

    $default  reduce using rule 52 (CmpStm)


State 56

   60 ComRelExp: Relexp •

    $default  reduce using rule 60 (ComRelExp)


State 57

   57 Statement: Term •
   61 Relexp: Term • LT Term
   62       | Term • LTE Term
   63       | Term • GT Term
   64       | Term • GTE Term
   65       | Term • EQ EQ Term
   66       | Term • NOT EQ Term
   70 Term: Term • ADD Factor
   71     | Term • SUB Factor

    ADD  shift, and go to state 47
    SUB  shift, and go to state 48
    EQ   shift, and go to state 82
    LT   shift, and go to state 83
    LTE  shift, and go to state 84
    GT   shift, and go to state 85
    GTE  shift, and go to state 86
    NOT  shift, and go to state 87

    $default  reduce using rule 57 (Statement)


State 58

   87 Val: LPAREN Term RPAREN •

    $default  reduce using rule 87 (Val)


State 59

   13 Declaration: LCURL $@4 DeclarationList • RCURL

    RCURL  shift, and go to state 88


State 60

    7 StatementList: WHILE LPAREN ComRelExp • RPAREN LCURL begin dummyLabels dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList
   58 ComRelExp: ComRelExp • AND Relexp
   59          | ComRelExp • OR Relexp

    AND     shift, and go to state 80
    OR      shift, and go to state 81
    RPAREN  shift, and go to state 89


State 61

   61 Relexp: Term • LT Term
   62       | Term • LTE Term
   63       | Term • GT Term
   64       | Term • GTE Term
   65       | Term • EQ EQ Term
   66       | Term • NOT EQ Term
   70 Term: Term • ADD Factor
   71     | Term • SUB Factor

    ADD  shift, and go to state 47
    SUB  shift, and go to state 48
    EQ   shift, and go to state 82
    LT   shift, and go to state 83
    LTE  shift, and go to state 84
    GT   shift, and go to state 85
    GTE  shift, and go to state 86
    NOT  shift, and go to state 87


State 62

   80 CaseVal: NUMBER •

    $default  reduce using rule 80 (CaseVal)


State 63

   79 CaseVal: IDENTIFIER •

    $default  reduce using rule 79 (CaseVal)


State 64

   32 SwitchStatement: SWITCH LPAREN CaseVal • $@5 RPAREN LCURL CaseStatements RCURL $@6 StatementList

    $default  reduce using rule 30 ($@5)

    $@5  go to state 90


State 65

   56 Statement: IDENTIFIER EQ Statement •

    $default  reduce using rule 56 (Statement)


State 66

   21 variablelist: IDENTIFIER EQ • NUMBER
   22             | IDENTIFIER EQ • CHARCONST
   24             | IDENTIFIER EQ • ConstIden COMMA variablelist

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    CHARCONST   shift, and go to state 91
    NUMBER      shift, and go to state 92
    IDENTIFIER  shift, and go to state 93

    ConstIden  go to state 94
    Val        go to state 95


State 67

   19 variablelist: IDENTIFIER COMMA • variablelist

    IDENTIFIER  shift, and go to state 43

    variablelist  go to state 96


State 68

   26 Bracket: LBRACK • NUMBER RBRACK
   27        | LBRACK • NUMBER RBRACK Bracket

    NUMBER  shift, and go to state 97


State 69

   20 variablelist: IDENTIFIER Bracket • COMMA variablelist
   23             | IDENTIFIER Bracket •

    COMMA  shift, and go to state 98

    $default  reduce using rule 23 (variablelist)


State 70

   14 Declaration: type variablelist SEMICOLON •

    $default  reduce using rule 14 (Declaration)


State 71

    2 StatementList: Statement SEMICOLON StatementList •

    $default  reduce using rule 2 (StatementList)


State 72

   70 Term: Term ADD Factor •
   73 Factor: Factor • MUL SIGNVal
   74       | Factor • DIV SIGNVal

    MUL  shift, and go to state 49
    DIV  shift, and go to state 50

    $default  reduce using rule 70 (Term)


State 73

   71 Term: Term SUB Factor •
   73 Factor: Factor • MUL SIGNVal
   74       | Factor • DIV SIGNVal

    MUL  shift, and go to state 49
    DIV  shift, and go to state 50

    $default  reduce using rule 71 (Term)


State 74

   73 Factor: Factor MUL SIGNVal •

    $default  reduce using rule 73 (Factor)


State 75

   74 Factor: Factor DIV SIGNVal •

    $default  reduce using rule 74 (Factor)


State 76

   68 Relexp: NOT Relexp •

    $default  reduce using rule 68 (Relexp)


State 77

   67 Relexp: LPAREN Relexp • RPAREN

    RPAREN  shift, and go to state 99


State 78

   61 Relexp: Term • LT Term
   62       | Term • LTE Term
   63       | Term • GT Term
   64       | Term • GTE Term
   65       | Term • EQ EQ Term
   66       | Term • NOT EQ Term
   70 Term: Term • ADD Factor
   71     | Term • SUB Factor
   87 Val: LPAREN Term • RPAREN

    ADD     shift, and go to state 47
    SUB     shift, and go to state 48
    EQ      shift, and go to state 82
    LT      shift, and go to state 83
    LTE     shift, and go to state 84
    GT      shift, and go to state 85
    GTE     shift, and go to state 86
    NOT     shift, and go to state 87
    RPAREN  shift, and go to state 58


State 79

   43 IfStatement: IF LPAREN CmpStm RPAREN • dummyLabels LCURL $@9 StatementList dummyLabels $@10 RCURL $@11 ElseIfStatement $@12 StatementList

    $default  reduce using rule 54 (dummyLabels)

    dummyLabels  go to state 100


State 80

   58 ComRelExp: ComRelExp AND • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 51
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 52
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 69 (Relexp)

    Relexp   go to state 101
    Term     go to state 61
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 81

   59 ComRelExp: ComRelExp OR • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 51
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 52
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 69 (Relexp)

    Relexp   go to state 102
    Term     go to state 61
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 82

   65 Relexp: Term EQ • EQ Term

    EQ  shift, and go to state 103


State 83

   61 Relexp: Term LT • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Term     go to state 104
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 84

   62 Relexp: Term LTE • Term
